<resources>
    <string name="app_name">Mago</string>
    <string name="login">登录</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="password_hint2">设置登录密码，不少于6位</string>
    <string name="passwordConfirm_hint">请再次输入密码</string>
    <string name="password_hint">密码</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="registerNow">立即注册</string>
    <string name="register">注册</string>
    <string name="nextStep">下一步</string>
    <string name="authCode">请输入收到的手机验证码</string>
    <string name="phoneAuth">手机验证</string>
    <string name="resend">重新发送</string>
    <string name="selfIntro">个人介绍</string>
    <string name="myProfile">我的资料</string>
    <string name="realname">真实姓名</string>
    <string name="phone">电话</string>
    <string name="gender">性别</string>
    <string name="adressList">通讯录</string>
    <string name="detailInfo">详细信息</string>
    <string name="setStarFriend">设为星标朋友</string>
    <string name="findFriend">找到朋友</string>
    <string name="delete">删除</string>
    <string name="myFriend">我的好友</string>
    <string name="setting">设置账户</string>
    <string name="help">系统帮助</string>
    <string name="message">消息通知</string>
    <string name="logout">注销</string>
    <string name="userDefaultSig">这个人很懒，他什么也没留下</string>
    <string name="addFriend">添加好友</string>
    <string name="close">关</string>
    <string name="open">开</string>
    <string name="inputthephonenumber">输入好友的手机号</string>
    <string name="logo">logo</string>
    <string name="functionDescription">功能介绍</string>
    <string name="teamIntro">团队介绍</string>
    <string name="likeUs">喜欢我们，打分鼓励</string>
    <string name="systemhelp">系统帮助</string>
    <string name="callRecord">通话记录</string>
    <string name="error_invalid_password">密码格式不正确</string>
    <string name="error_invalid_mobile_phone">非有效的手机号</string>
    <string name="error_notequal_password">密码不匹配</string>
    <string name="error_wrong_sms_code">验证码错误</string>
    <string name="error_invalid_sms_code_format">验证码格式错误</string>
    <string name="pleaseInputUsername">请输入用户名</string>
    <string name="error_empty_username">请输入用户名</string>
    <string name="error_invalid_phone_or_password">号码或密码错误</string>
    <!-- added by rushzhou on 2017/04/27 -->
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="settings">设置</string>
    <string name="cancel">取消</string>
    <string name="notset">暂未设置</string>
    <string name="username">用户名</string>
    <string name="finish">完成</string>
    <string name="add">添加</string>
    <string name="remark">备注 :</string>
    <string name="yes">确定</string>
    <string name="search">搜索</string>
    <string name="chat_utils_hardLoading">努力加载中</string>
    <string name="mago_1_0_0">mago1.0.0 版本功能介绍</string>
    <string name="magoTeamIntro">Mago项目团队介绍</string>
    <string name="inviteSharePosition">邀您进行位置共享...</string>
    <string name="connecting">通话连接中...</string>

</resources>
