<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.monster.fancy.debug.mago.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo"/>
    <EditText
        android:id="@+id/login_phone_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/phone_hint"/>
    <EditText
        android:id="@+id/login_password_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/password_hint"/>
    <Button
        android:id="@+id/login_btn"
        style="@style/BtnStyle"
        android:text="@string/login"/>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">
    <TextView
        android:id="@+id/login_forget_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor_gray"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:text="@string/forgetPassword"/>

    <TextView
        android:id="@+id/login_reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor_gray"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:text="@string/registerNow"/>
</RelativeLayout>


</LinearLayout>
