<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.monster.fancy.debug.mago.MessageIdentifyActivity">
    <EditText
        android:id="@+id/identify_authCode_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/authCode"/>
    <TextView
        android:id="@+id/identify_resend_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginRight="15dp"
        android:text="@string/resend"/>
    <Button
        android:id="@+id/identify_nextStep_btn"
        style="@style/BtnStyle"
        android:text="@string/nextStep"/>
</LinearLayout>
